--- a/projects.json
+++ b/projects.json
@@ -1,72 +1,5 @@
 {
-    "website":{ 
-        "PERSPECTIVES":{
-            "name":"PERSPECTIVES",
-            "year":"2024",
-            "info":"This website is an exploration of perspectives, both physical and conceptual. Initially, the idea centered on the literal act of observing a space, but it evolved to include the broader notion of perspective as an opinion or interpretation. This project delves into the interplay between individual perceptions of a space and the atmosphere or essence that space conveys. The focus is on Madison Square Park and the Flatiron District, an area I am intimately familiar with as a resident. My personal connection to the neighborhood, along with my inherent biases, sparked an interest in contrasting my own experiences with the viewpoints of others, creating a nuanced understanding of this iconic location.",
-            "reflection":"test reflection",
-            "material":["HTML","CSS"],
-            "link":"https://carbudar.github.io/PERSPECTIVES/",
-            "haveLink": true,
-            "documentation":{
-                "thumbnail":"assets/Documentation/PERSPECTIVES cover.png",
-                "doc1":"assets/Documentation/Process/PERSPECTIVES sketch 1.jpg",
-                "doc2":"assets/Documentation/Process/PERSPECTIVES sketch 2.jpg"
-            }
-        },
-        "today":{
-            "name":"today",
-            "year":"2024",
-            "info":" 'today' is designed to serve as a personal tool for users to document their emotions, sleep schedules, and other behavioral patterns, functioning similarly to a digital diary. All entries are stored locally, ensuring privacy and accessibility for users to review and reflect on their progress over time.",
-            "material":["HTML","CSS","Javascript"],
-            "link":"https://carbudar.github.io/Assignment-3/index.html",
-            "haveLink": true,
-            "documentation":{
-                "thumbnail":"assets/Documentation/today cover.png",
-                "doc1":"assets/Documentation/Process/today sketch.jpg",
-                "doc2":"assets/Documentation/Process/today brainstorm.png"
-            }
-        },
-        "System Log":{
-            "name":"System Log",
-            "year":"2024",
-            "info":"This project is a tool designed to translate daily activities into visualized data, providing insights into key metrics such as water intake, sleep duration, social interactions, and step count. By transforming these behaviors into clear, interpretable visuals, the tool aims to support users in tracking and understanding their habits effectively.",
-            "material":["HTML","CSS","Javascript"],
-            "link":"https://carbudar.github.io/Self-As-System/",
-            "haveLink": true,
-            "documentation":{
-                "thumbnail":"assets/Documentation/System Log cover.png",
-                "doc1":"assets/Documentation/Process/Self as System sketch.jpg",
-                "doc2":"assets/Documentation/Process/system log skech 1.png",
-                "doc3":"assets/Documentation/Process/system log sketch 2.png"
-            }
-        },
-        "Photo Archive":{
-            "name":"Photo Archive",
-            "year":"2024",
-            "info":"This website serves as an archival hub for my personal photography portfolio, offering detailed insights into each piece. The collection is presented in an organized grid format, allowing for a visually cohesive and engaging browsing experience.",
-            "material":["HTML","CSS","Javascript"],
-            "link":"https://carbudar.github.io/Photo-Archive/",
-            "haveLink": true,
-            "documentation":{
-                "thumbnail":"assets/Documentation/Photo Archive cover.png",
-                "doc1":"assets/Documentation/Process/Photo Archive main page sketch.png",
-                "doc2":"assets/Documentation/Process/Photo Archive Expanded Sketch.png"
-            }
-        },
-        "Big City Small World":{
-            "name":"Big City Small World",
-            "year":"2024",
-            "info":"'Big City Small World'is an ongoing archival documentation of a Soho, New York as a social neighborhood, aimed at capturing and analyzing its gradual evolution. It seeks to highlight the psychogeography of an environment, and explore the underlying factors contributing to these differences. The project encourages individuals to consciously take note of their surroundings, becoming active observers of behavioral patterns, social norms, and interactions—whether between people or between people and their environment. By fostering this sense of observation, the initiative aims to inspire deeper connections with the spaces we inhabit.",
-            "material":["HTML","CSS","Javascript"],
-            "link":"https://carbudar.github.io/Big-City-Small-World/",
-            "haveLink": true,
-            "documentation":{
-                "thumbnail":"assets/Documentation/Big CIty Small World cover.png",
-                "doc1":"assets/Documentation/Process/City As Systems Sketch 1.jpg",
-                "doc2":"assets/Documentation/Process/City As Systems Sketch 2.jpg"
-            }
-        },
+    "work":{ 
         "Odd Fellow Says Hello":{
             "name":"Odd Fellow Says Hello",
             "year":"2024",
@@ -94,6 +27,19 @@
                 "doc2":"assets/Documentation/Process/Hue Hunter color sketch.png"
             }
         },
+        "Photo Archive":{
+            "name":"Photo Archive",
+            "year":"2024",
+            "info":"This website serves as an archival hub for my personal photography portfolio, offering detailed insights into each piece. The collection is presented in an organized grid format, allowing for a visually cohesive and engaging browsing experience.",
+            "material":["HTML","CSS","Javascript"],
+            "link":"https://carbudar.github.io/Photo-Archive/",
+            "haveLink": true,
+            "documentation":{
+                "thumbnail":"assets/Documentation/Photo Archive cover.png",
+                "doc1":"assets/Documentation/Process/Photo Archive main page sketch.png",
+                "doc2":"assets/Documentation/Process/Photo Archive Expanded Sketch.png"
+            }
+        },
         "Sircle App":{
             "name":"Sircle",
             "year":"2022",
@@ -119,35 +65,7 @@
        
 
     },
-    "cc":{
-        "Data Portrait":{
-            "name":"Data Portrait",
-            "year":"2023",
-            "info":"For this project, I spent a week tracking my personal habit to create a data-self portrait. This sketch is divided into 7 different parts (shown by the guidelines in the background); the first section determines the first day which was Wednesday. The section goes up until the last day, which is Tuesday and the days change based on the mouse location. The density and the size of the orange form is the amount of time that I spent talking to people on the phone (in minutes), while the density and size or the purple form is based on the total minutes I spent interacting with people in real life. Lastly, the row of squares that travels from left to right shows the amount of people I interacted with per day.",
-            "material":["Javascript (p5.js)"],
-            "link":"https://editor.p5js.org/carbudar/full/Zlm2QO95a",
-            "haveLink": true,
-            "isPhysical":false,
-            "documentation":{
-                "thumbnail":"assets/Documentation/Data Portrait cover.png",
-                "doc1":"assets/Documentation/Process/Data Portrait Data.png",
-                "doc2":"assets/Documentation/Process/Data Portrait Sketch.png"
-            }
-        },
-        "In Bloom":{
-            "name":"In Bloom",
-            "year":"2023",
-            "info":"Explorative p5.js sketch inspired by spirograph templates, plastic stencils with  ridged circular cut out in the center. I would trace lines in it using the given template and make all kinds of cool spirals, which I have always found facinating. I wanted to recreate a similar effect to the spirographs by repeating multiple ellipses on top of each other which will then create a parametrized form.",
-            "material":["Javascript (p5.js)"],
-            "link":"https://editor.p5js.org/carbudar/full/knKo2lGbS",
-            "haveLink": true,
-            "isPhysical":false,
-            "documentation":{
-                "thumbnail":"assets/Documentation/In Bloom cover.png",
-                "doc1":"",
-                "doc2":""
-            }
-        },
+    "play":{
         "Rock Paper Scissor":{
             "name":"Rock Paper Scissor",
             "year":"2023",
@@ -161,6 +79,20 @@
                 "doc1":"assets/Documentation/Process/rps sketch 2.png",
                 "doc2":"assets/Documentation/Process/rps sketch v1.png",
                 "doc3":"assets/Documentation/Process/hand design.png"
+            }
+        },
+        "Data Portrait":{
+            "name":"Data Portrait",
+            "year":"2023",
+            "info":"For this project, I spent a week tracking my personal habit to create a data-self portrait. This sketch is divided into 7 different parts (shown by the guidelines in the background); the first section determines the first day which was Wednesday. The section goes up until the last day, which is Tuesday and the days change based on the mouse location. The density and the size of the orange form is the amount of time that I spent talking to people on the phone (in minutes), while the density and size or the purple form is based on the total minutes I spent interacting with people in real life. Lastly, the row of squares that travels from left to right shows the amount of people I interacted with per day.",
+            "material":["Javascript (p5.js)"],
+            "link":"https://editor.p5js.org/carbudar/full/Zlm2QO95a",
+            "haveLink": true,
+            "isPhysical":false,
+            "documentation":{
+                "thumbnail":"assets/Documentation/Data Portrait cover.png",
+                "doc1":"assets/Documentation/Process/Data Portrait Data.png",
+                "doc2":"assets/Documentation/Process/Data Portrait Sketch.png"
             }
         },
         "Time Keeper":{
@@ -178,36 +110,6 @@
             }
         
     },
-    "Puppy Vision":{
-            "name":"Puppy Vision",
-            "year":"2023",
-            "info":"In the summer, I adopted a little puppy named Charli. By spending plenty of time training and trying to understand her, I came across a study which mentioned that dogs are only able to see yellow and blue. After realizing how Charli is mostly intrigued by her blue blankets and toys, I felt obligated to get her all blue everything.<br>The main purpose of this experimental camera project is to help me put myself in Charli's shoes and see the world the way she sees it.",
-            "material":["Javascript (p5.js)"],
-            "link":"https://editor.p5js.org/carbudar/full/awLpZY_O8",
-            "haveLink": true,
-            "isPhysical":false,
-            "documentation":{
-                "thumbnail":"assets/Documentation/Puppy Vision cover.png",
-                "doc1":"",
-                "doc2":""
-            }
-        
-    },
-    "Looking In, Looking Out":{
-        "name":"Looking In, Looking Out",
-        "year":"2024",
-        "info":"I was inspired by the prompt 'Looking In, Looking Out' as a tool of reflection as well as escapism. While doors can lead you into a space, it can also transport you out beyond it. With my partner and classmate, Michelle Xing, we were able to cohesively build a media where people could enter a space of reflection beyond the tangible world.",
-        "material":["Unity", "Electronics"],
-        "link":"https://drive.google.com/file/d/11LMhpekrSUWbKPhQG8SG1pi_NhH7Im_j/preview",
-        "haveLink": true,
-        "isPhysical":false,
-        "documentation":{
-            "thumbnail":"assets/Documentation/Looking In Looking Out cover.png",
-            "doc1":"assets/Documentation/Process/Looking In Looking Out sketch.jpg",
-            "doc2":""
-        }
-    
-},
 "Sunrise":{
     "name":"Sunrise",
     "year":"2023",
@@ -257,73 +159,5 @@
     }
 
 }
-},
-    "product":{
-        "Light House":{
-            "name":"Light House",
-            "year":"2023",
-            "info":"This project was inspired between the basic relationship between two-dimensions and three-dimensions, how all three-dimensional form was formed by basic planar fields, yet the potentials are limitless. I wanted to design a sculptural form that looks visually appealing, yet functional. Combining an inspiration from Japanese origami artistry and my interest in modular design, I came up with 'Light House', a side coffee table and storage unit with a removable battery-powered lighting component.",
-            "material":["Acrylic","Polycarbonate","Electronics"],
-            "link":"",
-            "haveLink": false,
-            "documentation":{
-                "thumbnail":"assets/Documentation/Light House cover.jpg",
-                "doc1":"assets/Documentation/table demo.mov",
-                "doc2":"assets/Documentation/table1.jpg",
-                "doc3":"assets/Documentation/table 3.jpg",
-                "doc4":"assets/Documentation/table 6.jpeg",
-                "doc5":"assets/Documentation/table 7.jpeg",
-                "doc6":"assets/Documentation/table 4.jpg"
-            }
-
-        },
-        "EternaLight":{
-            "name":"EternaLight",
-            "year":"2023",
-            "info":"Designed with sustainability in mind, EternaLight is a lighting product designed to be the last lamp that everyone will have. With adjustable length, orientation, and brightness, EternaLight will be able to meet everyone's different needs and priorities. The separable parts help users to omit unnecessary waste by removing and replacing just the part which is damaged Not only that users will minimize solid waste contribution to the landfill, EternaLight's simple and minimalist design will not fade through trends in the upcoming years, making it a lighting fixture that will last users eternally.",
-            "material":["Wood","Mycelium","Hardware","Electronics"],
-            "link":"",
-            "haveLink": false,
-            "documentation":{
-                "thumbnail":"assets/Documentation/EternaLight cover.jpg",
-                "doc1":"assets/Documentation/Process/EternaLight manual guide 1.21.38 AM.png",
-                "doc2":"assets/Documentation/Process/Untitled 40 2.32.49 AM 2.34.17 AM.png",
-                "doc3":"assets/Documentation/Process/eternaLight stand.png",
-                "doc4":"assets/Documentation/Process/Mycellium focus.jpeg",
-                "doc5":"assets/Documentation/Process/EternaLight full shot.png"
-            }
-
-        },
-        "Twisted":{
-            "name":"Twisted",
-            "year":"2021",
-            "info":"This project was a material exploration with concrete, resin, and other supporting elements. I was intrigued in how shape manipulation can vary based on the base material behaves.",
-            "material":["Rope","Resin","Concrete","Electronics"],
-            "link":"",
-            "haveLink": false,
-            "documentation":{
-                "thumbnail":"assets/Documentation/Rope Lamp cover.png"
-            }
-
-        }
-
-    },
-    "directory":{
-        "floor1":{
-            "default":"assets/fl3 color.png",
-            "active":"assets/fl3 mono.png",
-            "isActive":false
-        },
-        "floor2":{
-            "default":"assets/fl2 color.png",
-            "active":"assets/fl2 mono.png",
-            "isActive":false
-
-        },
-        "floor3":{
-            "default":"assets/fl1 color.png",
-            "active":"assets/fl1 mono.png",
-            "isActive":false
-        }
-    }
+}
 }
